Archive2/a4/0205f32cced419/output
+ g++-4.8 -std=c++11 -O3 -S -masm=intel main.cpp -o -
main.cpp:25:5: error: ‘_Z5test2bbb’ does not name a type
     _Z5test2bbb:
     ^
main.cpp:33:11: error: ‘ret’ does not name a type
      rep; ret
           ^
	.file	"main.cpp"
	.intel_syntax noprefix
